// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Progress Bar renders correctly 1`] = `
<div
  className={undefined}
>
  <div
    className={undefined}
  >
    <div
      className="undefined "
      style={
        Object {
          "width": "0%",
        }
      }
    />
  </div>
</div>
`;

exports[`Progress Bar renders progress correctly 1`] = `
<div
  className={undefined}
>
  <div
    className={undefined}
  >
    <div
      className="undefined "
      style={
        Object {
          "width": "20%",
        }
      }
    />
  </div>
</div>
`;
